--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -24,7 +24,8 @@
 
   footer {
     align-self: stretch;
-    &.empty {
+    
+    &.empty .progress{
       opacity: 0.5;
     }
   }
@@ -113,6 +114,14 @@
     }
     &:hover:not(:disabled) {
       filter: brightness(0.6);
+    }
+
+    &.isActive {
+      filter : invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+    }
+
+    &.isActive:hover {
+      filter : brightness(0.6) sepia(1) saturate(3) hue-rotate(100deg);
     }
 
     &.playButton {
